2012-04-19  Stipe Tolj  <stolj at kannel.org>
    * doc/userguide/userguide.xml: adding documentation for escape code %x
      applicable for 'access-log-format' in the 'group = core' context.
    * gw/bb_alog.c: adding escape code %x for 'access-log-format' pattern
      handling, which substitutes to the smsbox-id. Reformated the function
      to comply with CodingStyle standards.
      
2012-04-08 Alexander Malysh <amalysh at kannel.org>
    * gw/smsbox.c: fixed double free bug for post request.
      Thanks to Bartlomiej Balcerek <Bartlomiej.Balcerek at pwr.wroc.pl>
      for bug report.

2012-04-06 Alexander Malysh <amalysh at kannel.org>
    * doc/arch/arch.xml: fixed #354.

2012-04-06 Alexander Malysh <amalysh at kannel.org>
    * doc/arch/arch.xml: fixed #355.

2012-04-06 Alexander Malysh <amalysh at kannel.org>
    * doc/userguide/userguide.xml: fixed default source and destination addr
      ton. This fixes #636.

2012-03-28  Stipe Tolj  <stolj at kannel.org>
    * gw/smsbox.c: fix minor compiler warning. NLC.
    
2012-03-21 Alexander Malysh <amalysh at kannel.org>
    * gw/smsc/smsc_http.c, gwlib/cfg.def, doc/userguide/userguide.xml:
      added new option 'generic-param-dlr-err' to pass dlr-err for DLR.

2012-03-21 Alexander Malysh <amalysh at kannel.org>
    * gw/smsc/smsc_http.c: don't convert HTTP dlr errorcode as stated in SMPP
      spec because HTTP is not SMPP. Just pass dlr errorcode as is to smsbox
      in ?dlr? meta data group, similar to other smsc modules.

2012-03-21 Alexander Malysh <amalysh at kannel.org>
    * gw/smsc/smsc_http.c: request DLR also if conndata->dlr_url is set.

2012-03-21 Alexander Malysh <amalysh at kannel.org>
    * gw/smsc/smsc_http.c: write the whole URL, with query string by debugging.

2012-03-21 Alexander Malysh <amalysh at kannel.org>
    * gw/meta_data.h: added some defines to use for meta data.

2012-03-08  Stipe Tolj  <stolj at kannel.org>