@@ -1,3 +1,6 @@
+2012-04-20 Alexander Malysh <amalysh at kannel.org>
+    * gw/smsbox.c: fixed issue with shut down of smsbox.
+
 2012-04-19  Stipe Tolj  <stolj at kannel.org>
     * doc/userguide/userguide.xml: adding documentation for escape code %x
       applicable for 'access-log-format' in the 'group = core' context.
